@@ -1,3 +1,11 @@
+2000-02-13  Havoc Pennington  <hp@pobox.com>
+
+	* gdk/x11/gdkcursor-x11.c (gdk_cursor_new_from_pixmap): init
+	refcount to 1
+	(gdk_cursor_new): init refcount to 1
+
+	* gdk/win32/gdkcursor-win32.c (gdk_cursor_new): init refcount to 1
+
 2000-02-13  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkgc-win32.c (gdk_gc_predraw): Add an extra parameter
