@@ -43,7 +43,8 @@ gdk_cursor_new (GdkCursorType cursor_type)
   private->xcursor = xcursor;
   cursor = (GdkCursor*) private;
   cursor->type = cursor_type;
-
+  cursor->ref_count = 1;
+  
   return cursor;
 }
 
@@ -83,7 +84,8 @@ gdk_cursor_new_from_pixmap (GdkPixmap *source,
   private->xcursor = xcursor;
   cursor = (GdkCursor *) private;
   cursor->type = GDK_CURSOR_IS_PIXMAP;
-
+  cursor->ref_count = 1;
+  
   return cursor;
 }
 
